--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/LoginPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/LoginPage.xaml
@@ -1,112 +1,128 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<views:BaseValidationContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:viewModels="clr-namespace:Healthcare020.Mobile.ViewModels;assembly=Healthcare020.Mobile"
-             xmlns:app="clr-namespace:Healthcare020.Mobile.Helpers;assembly=Healthcare020.Mobile"
+             xmlns:views="clr-namespace:Healthcare020.Mobile.Views;assembly=Healthcare020.Mobile"
              mc:Ignorable="d"
-             x:Class="Healthcare020.Mobile.Views.LoginPage"
-             BindingContext="{x:Static app:ViewModelLocator.LoginViewModel}">
-
+             x:Class="Healthcare020.Mobile.Views.LoginPage">
 
     <ContentPage.Content>
-        <Grid VerticalOptions="FillAndExpand"   BackgroundColor="WhiteSmoke">
-            <StackLayout Padding="0" Margin="0">
-                <Grid HorizontalOptions="FillAndExpand"
+        <ScrollView>
+            <Grid VerticalOptions="FillAndExpand"   BackgroundColor="WhiteSmoke">
+                <StackLayout Padding="0" Margin="0">
+                    <Grid HorizontalOptions="FillAndExpand"
                       VerticalOptions="FillAndExpand" RowSpacing="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"></RowDefinition>
-                        <RowDefinition Height="*"></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <Frame BackgroundColor="#00bebe" Grid.Row="0">
-                    </Frame>
-                    <Frame BackgroundColor="WhiteSmoke" Grid.Row="1">
-                    </Frame>
-                </Grid>
-            </StackLayout>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Frame BackgroundColor="#00bebe" Grid.Row="0">
+                        </Frame>
+                        <Frame BackgroundColor="WhiteSmoke" Grid.Row="1">
+                        </Frame>
+                    </Grid>
+                </StackLayout>
 
-            <StackLayout Margin="45,50,45,70" VerticalOptions="Center">
-                <Frame BackgroundColor="White"
+                <StackLayout Margin="45,20,45,70"
+                             VerticalOptions="Center">
+                    <Frame BackgroundColor="White"
                            HasShadow="False"
                            VerticalOptions="FillAndExpand"
                            Margin="0"
                            Padding="0"
                            HorizontalOptions="FillAndExpand">
 
-                    <StackLayout Padding="50,20" Spacing="20" VerticalOptions="FillAndExpand" HorizontalOptions="Center">
-                        <Frame HasShadow="False" Margin="0" Padding="0" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-                            <Image HorizontalOptions="Center" Aspect="AspectFit">
-                                <Image.Source>
-                                    <OnPlatform x:TypeArguments="ImageSource">
-                                        <On Platform="Android">Assets/healthcare020_200x200.png</On>
-                                        <On Platform="UWP">Assets/healthcare020_200x200.png</On>
-                                    </OnPlatform>
+                        <StackLayout Spacing="10" Style="{StaticResource LoginFormBodyStyle}">
 
-                                </Image.Source>
-                            </Image>
-                        </Frame>
-                        <Entry Placeholder="Korisničko ime" Text="{Binding Username}"  FontSize="18" HeightRequest="50" x:Name="Username"/>
-                        <Label x:Name="UsernameErrorLabel" TextColor="Red"></Label>
-                        <Entry Placeholder="Lozinka" HeightRequest="50" Text="{Binding Password}" IsPassword="True"  FontSize="18" x:Name="Password" MaxLength="15"/>
-                        <Label x:Name="PasswordErrorLabel" TextColor="Red"></Label>
+                            <Frame HasShadow="False" Margin="0" Padding="0" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                                <Image HorizontalOptions="Center"
+                                   Aspect="AspectFit"
+                                   Source="{StaticResource Logo}"></Image>
+                            </Frame>
 
-                        <!--REMEMBER ME-->
-                        <Grid VerticalOptions="Center" HorizontalOptions="Start">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="40" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Label VerticalTextAlignment="Center" Margin="8,0"  Grid.Column="0" Text="Zapamti me" TextColor="#666769" FontSize="17"></Label>
-                            <Switch Grid.Row="0" Grid.Column="1"
+                            <!--FORM BODY-->
+                            <StackLayout x:Name="FormBody" Spacing="0">
+                                <StackLayout.Resources>
+                                    <Style TargetType="Label" BasedOn="{StaticResource CustomValidationLabel}"></Style>
+                                    <Style TargetType="Entry" BasedOn="{StaticResource LoginPageEntryStyle}"></Style>
+                                </StackLayout.Resources>
+                                <Entry Placeholder="Korisničko ime"
+                                       ClassId="Username"
+                                       Text="{Binding Username}"
+                                       MaxLength="20" />
+                                <Label x:Name="UsernameValidation"></Label>
+                                <Entry Placeholder="Lozinka"
+                                       Text="{Binding Password}"
+                                       IsPassword="True"
+                                       ClassId="Password"
+                                       MaxLength="20" />
+                                <Label x:Name="PasswordValidation"></Label>
+                            </StackLayout>
+                            <!--/FORM BODY-->
+
+                            <!--REMEMBER ME-->
+                            <Grid VerticalOptions="Center" HorizontalOptions="Start">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="40" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Label VerticalTextAlignment="Center"
+                                   Margin="8,0"
+                                   Grid.Column="0"
+                                   Text="Zapamti me"
+                                   TextColor="#666769"
+                                   FontSize="{StaticResource FontSize-Small}">
+                                </Label>
+                                <Switch Grid.Row="0"
+                                        Grid.Column="1"
                                     VerticalOptions="Center"
                                     HorizontalOptions="End"
                                     x:Name="RememberMe"
-                                    Toggled="RememberMe_OnToggled"/>
-                        </Grid>
+                                    Toggled="RememberMe_OnToggled" />
+                            </Grid>
+                            <!--/REMEMBER ME-->
 
-                        <!--LOGIN BUTTON-->
-                        <Frame HasShadow="False" Margin="0" Padding="0" HorizontalOptions="FillAndExpand">
-                            <Button Text="Log in" BackgroundColor="#00bebe"
+                            <!--LOGIN BUTTON-->
+                            <Frame HasShadow="False" Margin="0" Padding="0" HorizontalOptions="FillAndExpand">
+                                <Button Text="Log in" BackgroundColor="#00bebe"
                                         TextColor="WhiteSmoke"
-                                        HeightRequest="40"
-                                        CornerRadius="20"
-                                        FontSize="12"
-                                        Command="{Binding LoginCommand}"/>
-                        </Frame>
+                                        Clicked="Button_OnClicked"
+                                        Style="{StaticResource BigButtonRadiusStyle}" />
+                            </Frame>
 
-                        <Label Text="Forgotten password?" TextColor="#496075" HorizontalOptions="Center" FontSize="13" />
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-                            <BoxView BackgroundColor="#555" HorizontalOptions="FillAndExpand" VerticalOptions="Center" HeightRequest="0.2" />
-                            <Label Text="OR" TextColor="#555" HorizontalOptions="Center"  VerticalOptions="Center" FontSize="Medium" />
-                            <BoxView BackgroundColor="#555" HorizontalOptions="FillAndExpand" VerticalOptions="Center" HeightRequest="0.2" />
-                        </StackLayout>
-                        <Frame HasShadow="False" Margin="0" Padding="0" HorizontalOptions="FillAndExpand">
-                            <Button CornerRadius="20" x:Name="RegisterButton"
-                                    HorizontalOptions="Center"
+                            <Label Text="Forgotten password?" TextColor="#496075" HorizontalOptions="Center" FontSize="{StaticResource FontSize-Small}" />
+                            <StackLayout Orientation="Horizontal"
+                                     HorizontalOptions="FillAndExpand">
+                                <BoxView BackgroundColor="#555"
+                                     HorizontalOptions="FillAndExpand"
+                                     VerticalOptions="Center"
+                                     HeightRequest="0.1" />
+                                <Label Text="OR" TextColor="#555" HorizontalOptions="Center"
+                                   VerticalOptions="Center"
+                                   FontSize="{StaticResource FontSize-Small}" />
+                                <BoxView BackgroundColor="#555"
+                                     HorizontalOptions="FillAndExpand"
+                                     VerticalOptions="Center"
+                                     HeightRequest="0.2" />
+                            </StackLayout>
+                            <Frame HasShadow="False" Margin="0"
+                               Padding="0"
+                               HorizontalOptions="FillAndExpand">
+                                <Button  x:Name="RegisterButton"
                                     Text="Register"
                                     TextColor="#31373d"
-                                    HeightRequest="40"
-                                    WidthRequest="300"
-                                    Font="12">
-                            </Button>
-                        </Frame>
-                    </StackLayout>
-                    <!--<Button CornerRadius="25" x:Name="PosetaButton"
-                                        BackgroundColor="#496075"
-                                        HorizontalOptions="Center"
-                                        Text="Poseta"
-                                        TextColor="WhiteSmoke"
-                                        HeightRequest="50"
-                                        WidthRequest="300"
-                                        Font="14"
-                                        Command="{Binding PosetaPageCommand}">
-                                </Button>-->
-                </Frame>
-            </StackLayout>
-        </Grid>
+                                    Style="{StaticResource BigButtonRadiusStyle}"
+                                    Clicked="RegisterButton_OnClicked">
+                                </Button>
+                            </Frame>
+                        </StackLayout>
+                    </Frame>
+                </StackLayout>
+            </Grid>
+        </ScrollView>
     </ContentPage.Content>
-</ContentPage>
+</views:BaseValidationContentPage>
