--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/SplashScreenPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/SplashScreenPage.xaml
@@ -1,12 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="Healthcare020.Mobile.Views.SplashScreenPage">
+<ContentPage
+    x:Class="Healthcare020.Mobile.Views.SplashScreenPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="White" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0">
-        </StackLayout>
+        <forms:AnimationView
+            x:Name="animationView"
+            Animation="welcome_animationview.json"
+            HorizontalOptions="FillAndExpand"
+            IsPlaying="True"
+            Loop="True"
+            VerticalOptions="FillAndExpand" />
     </ContentPage.Content>
 </ContentPage>
